Try to fix issue with body getting cut off on left

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body {
   margin-left: 7%;
   padding-bottom: 10px;
   width: 86%;
+  float: none;
+  clear: both;
 }
 
 #header {
